# llm-eval

./: README.md  compare.py  pyproject.toml
data/: sample.json
notebooks/: experiment.ipynb
src/evaluation/: main.py
src/utils/: data_loader.py
visualizations/reports/: model_comparison_report.md
